--- a/src/scss/pages/about/_about.scss
+++ b/src/scss/pages/about/_about.scss
@@ -2,17 +2,62 @@
     background: url('../../../img/backgrounds/about.jpg') no-repeat center / cover;
     min-height: 70rem;
     width: 100%;
+    padding-top: 3.4rem;
+
+    &-dark {
+        background: url('../../../img/backgrounds/about-dark.jpg') no-repeat center / cover;
+    }
 
     .container {
         max-width: 120rem;
         margin: 0 auto;
-        padding: 8rem 6rem 8rem 7.5rem;
+        padding: 3.3rem 5rem 8rem 5rem;
+        display: flex;
+
     }
 
     &__text {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 3rem;
         width: 50%;
+        padding-top: 4rem;
+        padding-right: 2rem;
+
+        &_subtitle {
+            font-size: 2.5rem;
+            font-weight: 500;
+        }
+
+        &_paragraph {
+            font-size: 2rem;
+            font-weight: 400;
+        }
+    }
+
+    &__images {
+        width: 53rem;
+        height: 50rem;
+        position: relative;
+
+        &-1 {
+            width: 31rem;
+            height: 36rem;
+            border-radius: 25px;
+            position: absolute;
+            z-index: 2;
+            bottom: 0;
+            left: 0;
+        }
+
+        &-2 {
+            width: 31rem;
+            height: 36rem;
+            border-radius: 25px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 1;
+        }
     }
 }
