--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -22,7 +22,7 @@
         display: flex;
         align-items: center;
         gap: 10px;
-        background: #fff;
+        background: var(--card-color);
         width: 20rem;
         height: 10rem;
         border-radius: 10px;
