--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "./base/base.scss";
 @import "./base/utilities.scss";
 @import "./base/typography.scss";
+@import "./components/themeSwitcher.scss";
 @import "./components/button.scss";
 @import "./components/header.scss";
 @import "./components/hero.scss";
