--- a/src/scss/pages/about/_reviews.scss
+++ b/src/scss/pages/about/_reviews.scss
@@ -24,8 +24,8 @@
         gap: 2.5rem;
         padding: 2.4rem 8.4rem 2.4rem 5.6rem;
         border-radius: 105px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .2);
-        background-color: var(--text-color-white);
+        box-shadow: 0 4px 4px 0 var(--box-shadow);
+        background-color: var(--card-color);
 
         h5 {
             font-size: 2rem;
