--- a/src/scss/pages/about/_services.scss
+++ b/src/scss/pages/about/_services.scss
@@ -2,6 +2,7 @@
     padding-top: 3.4rem;
     min-height: 71rem;
     width: 100%;
+    background: var(--background-color);
 
     .container {
         max-width: 120rem;
@@ -16,7 +17,7 @@
     }
 
     &__card {
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, #ffffff 40%),
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
             url('../../../img/catalog-photos/mobile.png') no-repeat;
         background-size: contain;
         display: flex;
@@ -25,27 +26,27 @@
         // justify-content: space-between;
         width: 28rem;
         height: 40rem;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .2);
+        box-shadow: 0 4px 4px 0 var(--box-shadow);
         border-radius: 10px;
         padding: 12rem 2rem 2rem;
         transition: all .2s;
 
         &-1 {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, #ffffff 40%),
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
                 url('../../../img/catalog-photos/mobile.png') no-repeat;
             background-size: contain;
 
         }
 
         &-2 {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, #ffffff 40%),
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
                 url('../../../img/catalog-photos/harddisk.png') no-repeat;
             background-size: contain;
 
         }
 
         &-3 {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, #ffffff 40%),
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
                 url('../../../img/catalog-photos/pc-repair.png') no-repeat;
             background-size: contain;
 
@@ -61,7 +62,7 @@
             justify-content: center;
             width: 8rem;
             height: 8rem;
-            background: #fff;
+            background: var(--service-icon-inner);
             margin: 0 auto;
             border-radius: 100%;
             box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .2);
