--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -24,6 +24,38 @@
 
 }
 
+@mixin respond($breakpoint) {
+    @if $breakpoint ==phone {
+        @media only screen and (max-width: 400px) {
+            @content;
+        }
+    }
+
+    @if $breakpoint ==big-phone {
+        @media only screen and (max-width: 550px) {
+            @content;
+        }
+    }
+
+    @else if $breakpoint ==tab-port {
+        @media only screen and (max-width: 830px) {
+            @content;
+        }
+    }
+
+    @else if $breakpoint ==tab-land {
+        @media only screen and (max-width: 1200px) {
+            @content;
+        }
+    }
+
+    @else if $breakpoint ==big-screen {
+        @media only screen and (min-width: 1800px) {
+            @content;
+        }
+    }
+}
+
 *,
 ::after,
 ::before {
@@ -34,6 +66,18 @@
 
 html {
     font-size: 62.5%;
+
+    @include respond(tab-land) {
+        font-size: 50%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 45%;
+    }
+
+    @include respond(phone) {
+        font-size: 40%;
+    }
 }
 
 body {
@@ -41,4 +85,5 @@ body {
     font-weight: 400;
     font-size: 1.6rem;
     color: var(--text-color);
+
 }
