--- a/src/scss/components/_themeSwitcher.scss
+++ b/src/scss/components/_themeSwitcher.scss
@@ -9,6 +9,13 @@
     top: 30px;
     font-size: 30px;
 
+    @include respond(tab-land) {
+        width: 19rem;
+    }
+
+    @include respond(tab-port) {
+        width: 16rem;
+    }
 }
 
 .theme-switch-wrapper span {
@@ -32,7 +39,7 @@
 }
 
 .toggle-text {
-    color: #fff 
+    color: #fff
 }
 
 .theme-switch {
@@ -40,6 +47,11 @@
     height: 34px;
     position: relative;
     width: 60px;
+
+    @include respond(tab-port) {
+        height: 20px;
+        width: 40px;
+    }
 }
 
 .theme-switch input {
@@ -66,6 +78,11 @@
     position: absolute;
     transition: 0.4s;
     width: 26px;
+
+    @include respond(tab-port) {
+        height: 13px;
+        width: 13px;
+    }
 }
 
 input:checked+.slider {
@@ -74,6 +91,10 @@ input:checked+.slider {
 
 input:checked+.slider::before {
     transform: translateX(26px);
+
+    @include respond(tab-port) {
+        transform: translateX(18px);
+    }
 }
 
 .slider.round {
