--- a/src/scss/pages/about/_help.scss
+++ b/src/scss/pages/about/_help.scss
@@ -5,6 +5,10 @@
     min-height: 70rem;
     padding-top: 6rem;
 
+    @include respond(big-phone) {
+        min-height: 100vh;
+    }
+
     &-dark {
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, #121212 50%),
             url('../../../img/backgrounds/how-can-we-help-dark.jpg') no-repeat center top;
@@ -16,11 +20,31 @@
         max-width: 120rem;
         margin: 0 auto;
         padding: 7rem 15rem 4rem;
+
+        @include respond(tab-land) {
+            padding-left: 10rem;
+            padding-right: 10rem;
+        }
+
+        @include respond(tab-port) {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
     }
 
     &__wrapper {
         display: flex;
         gap: 3rem;
+
+        @include respond(tab-port) {
+            justify-content: center;
+            gap: 1.5rem;
+        }
+
+        @include respond(big-phone) {
+            flex-direction: column;
+            align-items: center;
+        }
 
 
         &_item {
@@ -35,6 +59,18 @@
             border-radius: 1rem;
             box-shadow: 0 4px 4px 0 var(--box-shadow);
             transition: all .6s;
+
+            @include respond(tab-port) {
+                height: 40rem;
+            }
+
+            @include respond(big-phone) {
+                width: 100%;
+                height: 30rem;
+                padding-top: 3rem;
+                border-radius: 4rem;
+
+            }
 
             &:hover {
                 cursor: pointer;
