--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -18,8 +18,8 @@
     &::before {
         content: '';
         display: inline-block;
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 30px;
+        height: 30px;
         background: url('../../icons/gear-black.svg') no-repeat center;
         background-size: contain;
         margin-right: 1rem;
@@ -29,8 +29,8 @@
     &::after {
         content: '';
         display: inline-block;
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 30px;
+        height: 30px;
         background: url('../../icons/gear-black.svg') no-repeat center;
         background-size: contain;
         margin-left: 1rem;
