--- a/src/scss/pages/about/_about.scss
+++ b/src/scss/pages/about/_about.scss
@@ -4,6 +4,15 @@
     width: 100%;
     padding-top: 3.4rem;
 
+    @include respond(tab-land) {
+        padding: 3rem 3rem
+    }
+
+    @include respond(big-phone) {
+        padding: 7rem 1rem;
+        min-height: 100vh;
+    }
+
     &-dark {
         background: url('../../../img/backgrounds/about-dark.jpg') no-repeat center / cover;
     }
@@ -13,6 +22,13 @@
         margin: 0 auto;
         padding: 3.3rem 5rem 8rem 5rem;
         display: flex;
+
+        @include respond(tab-port) {
+            flex-direction: column-reverse;
+            align-items: center;
+            padding: 3.3rem 2rem 8rem 2rem;
+
+        }
 
     }
 
@@ -24,14 +40,37 @@
         padding-top: 4rem;
         padding-right: 2rem;
 
+        @include respond(tab-port) {
+            width: 80%;
+            height: auto;
+            text-align: center;
+            padding: 0;
+            margin-top: 3rem;
+        }
+
+        @include respond(big-phone) {
+            width: 100%;
+        }
+
         &_subtitle {
             font-size: 2.5rem;
             font-weight: 500;
+
+
+            @include respond(big-phone) {
+                font-size: 3rem;
+            }
         }
 
         &_paragraph {
             font-size: 2rem;
             font-weight: 400;
+
+
+            @include respond(big-phone) {
+                font-size: 2.5rem;
+                margin-bottom: 2rem;
+            }
         }
     }
 
@@ -39,6 +78,14 @@
         width: 53rem;
         height: 50rem;
         position: relative;
+
+        @include respond(tab-port) {
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
 
         &-1 {
             width: 31rem;
@@ -48,6 +95,17 @@
             z-index: 2;
             bottom: 0;
             left: 0;
+
+
+            @include respond(tab-port) {
+                position: relative;
+                height: auto;
+            }
+
+            @include respond(big-phone) {
+                width: 36rem;
+            }
+
         }
 
         &-2 {
@@ -58,6 +116,16 @@
             top: 0;
             right: 0;
             z-index: 1;
+
+            @include respond(tab-port) {
+                position: relative;
+                // width: 36rem;
+                height: auto;
+            }
+
+            @include respond(big-phone) {
+                display: none;
+            }
         }
     }
 }
