--- a/src/scss/pages/about/_services.scss
+++ b/src/scss/pages/about/_services.scss
@@ -4,6 +4,15 @@
     width: 100%;
     background: var(--background-color);
 
+    @include respond(tab-port) {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    @include respond(big-phone) {
+        min-height: 70vh;
+    }
+
     .container {
         max-width: 120rem;
         margin: 0 auto;
@@ -11,9 +20,18 @@
 
     &__wrapper {
         display: flex;
-        margin-top: 5.5rem;
         gap: 6rem;
         justify-content: center;
+
+        @include respond(tab-land) {
+            gap: 3rem;
+        }
+
+        @include respond(tab-port) {
+            gap: 2rem;
+
+        }
+
     }
 
     &__card {
@@ -23,31 +41,76 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // justify-content: space-between;
+        justify-content: space-between;
         width: 28rem;
-        height: 40rem;
+        height: 41rem;
         box-shadow: 0 4px 4px 0 var(--box-shadow);
         border-radius: 10px;
         padding: 12rem 2rem 2rem;
         transition: all .2s;
 
+        @include respond(tab-port) {
+            width: 40rem;
+        }
+
+
         &-1 {
             background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
-                url('../../../img/catalog-photos/mobile.png') no-repeat;
+                url('../../../img/catalog-photos/network.png') no-repeat;
             background-size: contain;
 
         }
 
         &-2 {
             background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/printer.png') no-repeat;
+            background-size: contain;
+        }
+
+        &-3 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/corporation.png') no-repeat;
+            background-size: contain;
+        }
+
+        &-4 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/mobile.png') no-repeat;
+            background-size: contain;
+
+        }
+
+        &-5 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
                 url('../../../img/catalog-photos/harddisk.png') no-repeat;
             background-size: contain;
 
         }
 
-        &-3 {
+        &-6 {
             background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
                 url('../../../img/catalog-photos/pc-repair.png') no-repeat;
+            background-size: contain;
+
+        }
+
+        &-7 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/laptop.png') no-repeat;
+            background-size: contain;
+
+        }
+
+        &-8 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/install.png') no-repeat;
+            background-size: contain;
+
+        }
+
+        &-9 {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, var(--card-color) 40%),
+                url('../../../img/catalog-photos/help-user.png') no-repeat;
             background-size: contain;
 
         }
@@ -72,21 +135,21 @@
             font-size: 2rem;
             font-weight: 400;
             text-align: center;
-            margin-top: 1.1rem;
+            margin-top: .5rem;
         }
 
         &_descr {
             font-size: 1.2rem;
             font-weight: 400;
             text-align: center;
-            margin-top: 1.1rem;
         }
 
         &_link {
             position: relative;
             color: var(--text-color);
             text-decoration: none;
-            margin-top: 4.5rem;
+            // margin-top: 4.5rem;
+            margin-bottom: 1rem;
             font-weight: 500;
             font-size: 1.5rem;
             transition: all .3s;
@@ -107,39 +170,202 @@
         }
     }
 
-    &__dots {
-        margin-top: 4rem;
-        display: flex;
-        justify-content: center;
-        gap: 13px;
-        align-items: center;
-
-        &_dot {
-            width: 2rem;
-            height: 2rem;
-            background: #D9D9D9;
-            border-radius: 100%;
-            transition: all .3s;
-
-            &:hover {
-                background: var(--main-green-color);
-                transform: scale(1.2);
-                cursor: pointer;
-            }
-
-            &-active {
-                background: var(--main-green-color);
-                transform: scale(1.2);
-            }
-        }
-
-    }
 }
 
 
+/* SLIDER */
+.slider-services {
+    max-width: 120rem;
+    height: 50rem;
 
-// background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, #ffffff 50%),
-// url('../../../img/backgrounds/how-can-we-help.jpg') no-repeat center top;
-// background-size: cover;
-// min-height: 70rem;
-// padding-top: 6rem;
+    margin: 0 auto;
+    position: relative;
+
+    /* IN THE END */
+    overflow: hidden;
+
+    @include respond(tab-port) {
+        display: none;
+    }
+
+}
+
+.slide {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 50rem;
+
+    padding-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    /* THIS creates the animation! */
+    transition: transform 1s;
+}
+
+
+.slider-services__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+
+    border: none;
+    background: rgba(255, 255, 255, 0.7);
+    font-family: inherit;
+    color: #333;
+    border-radius: 50%;
+    height: 5.5rem;
+    width: 5.5rem;
+    font-size: 3.25rem;
+    cursor: pointer;
+}
+
+.slider-services__btn--left {
+    left: 6%;
+    transform: translate(-50%, -50%);
+
+    @include respond(tab-port) {
+        display: none;
+    }
+}
+
+.slider-services__btn--right {
+    right: 6%;
+    transform: translate(50%, -50%);
+
+    @include respond(tab-port) {
+        display: none;
+    }
+}
+
+.dots {
+    margin-top: 2rem;
+    position: absolute;
+    bottom: 3px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+}
+
+.dots__dot {
+    border: none;
+    opacity: 0.7;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+    width: 2rem;
+    height: 2rem;
+    background: #D9D9D9;
+    border-radius: 100%;
+    transition: all .3s;
+}
+
+.dots__dot:last-child {
+    margin: 0;
+}
+
+.dots__dot--active {
+    background: var(--main-green-color);
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+
+/* SLIDER MOBILE */
+.slider-mobile {
+    display: none;
+    max-width: 120rem;
+    height: 50rem;
+
+    margin: 0 auto;
+    position: relative;
+
+    /* IN THE END */
+    overflow: hidden;
+
+    @include respond(tab-port) {
+        display: block;
+        max-width: 70rem;
+    }
+
+}
+
+.slide-mobile {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 50rem;
+
+    padding-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    /* THIS creates the animation! */
+    transition: transform 1s;
+}
+
+
+.slider-mobile__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+
+    border: none;
+    background: rgba(255, 255, 255, 0.7);
+    font-family: inherit;
+    color: #333;
+    border-radius: 50%;
+    height: 5.5rem;
+    width: 5.5rem;
+    font-size: 3.25rem;
+    cursor: pointer;
+}
+
+.slider-mobile__btn--left {
+    left: 6%;
+    transform: translate(-50%, -50%);
+
+}
+
+.slider-mobile__btn--right {
+    right: 6%;
+    transform: translate(50%, -50%);
+
+}
+
+.dots-mobile {
+    margin-top: 2rem;
+    position: absolute;
+    bottom: 3px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+}
+
+.dots-mobile__dot {
+    border: none;
+    opacity: 0.7;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+    width: 2rem;
+    height: 2rem;
+    background: #D9D9D9;
+    border-radius: 100%;
+    transition: all .3s;
+}
+
+.dots-mobile__dot:last-child {
+    margin: 0;
+}
+
+.dots-mobile__dot--active {
+    background: var(--main-green-color);
+    transform: scale(1.2);
+    opacity: 1;
+}
