--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,6 @@
 @import "./pages/about/help.scss";
 @import "./pages/about/services.scss";
 @import "./pages/about/reviews.scss";
+@import "./pages/catalog/catalog.scss";
+@import "./pages/catalog/stats.scss";
+@import './pages/contact/contacts.scss';
