--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -15,6 +15,13 @@
     padding: 10px 20px;
     border-radius: 27px;
 
+    &-big {
+        border-radius: 17px;
+        width: 37.4rem;
+        height: 6.5rem;
+        font-size: 3rem;
+    }
+
     &::before {
         content: '';
         display: inline-block;
